over; each version contains new things which might significantly affect
the function of your server.  Changes are reported in reverse
chronological order (most recent first)

[SW] is Shawn Wagner, a PennMUSH developer (aka Raevnos), also
 responsible for most unattributed changes.
[EEH] is Ervin Hearn III, a PennMUSH developer (aka Noltar)
[GM] is Greg Millam, a PennMUSH developer (aka Walker)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH
[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[MG] is Mike Griffiths, a PennMUSH developer (aka Talvo)

==========================================================================

Version 1.8.3 patchlevel 10                     Apr ??, 2009

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating
   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.

Fixes:
  * @pcreate without a password would crash the game. Fixed. [GM]
  * DARK-disconnected on channels was turned into DARK-connected, on
    disconnect. Reported by Paige@M*U*S*H, among others.
  * MOGRIFY`BLOCK wasn't being called, as help @channel6 said it was.
    Oops. [GM]
  * Some help fixes. [GM]
  * @clone could mess up the names of the original and the clone. 
    Reported by qa'toq. [SW]
  * Crash bugs in rand() and randword(). [SW]
  * Added --disable-zlib configure option to turn off using
    zlib to work directly with compressed databases. Passing this to
    configure makes the game act like pre p8 ones. [SW]
  * member() now ignores ANSI in matches. Reported by Minion. [MG]

Version 1.8.3 patchlevel 9                      Feb 28, 2009

Fixes:
 * Starting up without an existing database was broken in p8.
   Reported by many people. [SW]
 * p8 didn't compile for many people for a number of reasons.
   [SW]