@@ -8,11 +8,11 @@ chronological order (most recent first)
  responsible for most unattributed changes.
 [EEH] is Ervin Hearn III, a PennMUSH developer (aka Noltar)
 [GM] is Greg Millam, a PennMUSH developer (aka Walker)
+[MG] is Mike Griffiths, a PennMUSH developer (aka Talvo)
+[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
 [3] refers to code by (or inspired by) TinyMUSH 3.0
 [MUX] refers to code by (or inspired by) TinyMUX 2.x
 [Rhost] refers to code by (or inspired by) RhostMUSH
-[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
-[MG] is Mike Griffiths, a PennMUSH developer (aka Talvo)
 
 ==========================================================================
 
@@ -37,6 +37,7 @@ Fixes:
     zlib to work directly with compressed databases. Passing this to
     configure makes the game act like pre p8 ones. [SW]
   * member() now ignores ANSI in matches. Reported by Minion. [MG]
+  * Regexp $-commands are now ansi aware. As in: ansi is passed to %0-%9. [GM]
 
 Version 1.8.3 patchlevel 9                      Feb 28, 2009
 
